# monitor

./: .gitignore  DEPLOYMENT.md  MONITORING_README.md  README.md  cos_service.py  database.py  fix.md  logs.sh  main.py  models.py  monitoring.db  monitoring_scheduler.py  pyproject.toml  q.py  requirements.txt  start.sh  status.sh  stop.sh  system_metrics_schema.sql  system_metrics_sqlite.sql  system_monitor.py  test.html  vercel.json  返回结果example.json
static/: monitor.html
