[project]
name = "backend_fake"
version = "0.1.0"
description = "Backend service for chatbot interface"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = []
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.setuptools.optimization]
strip-debug = true
compress = true
